# experimental

./: .build.sh  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pom.xml
c/drilling/: CMakeLists.txt  Makefile  density.c
c/gos/: CMakeLists.txt  Makefile  color.c  compile-wasm.bat  geometry.c  interpolate.c  noise.c  perlin.c  signal.c
c/gosout/: CMakeLists.txt  gosout.c
c/nn/: CMakeLists.txt
c/nn/src/: CMakeLists.txt
c/nn/src/iris/: CMakeLists.txt  iris.c
c/opcua/: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
c/opcua/scripts/docker/: build.bat  build.sh
c/opcua/src/server/: CMakeLists.txt  Dockerfile  server.c
c/sdl/: CMakeLists.txt  render.c  sdl.c
c/sdl2/: CMakeLists.txt  sdl2exp.c
c/sparkplugb/: CMakeLists.txt  sparkplugb.c
c/tahuspb/: CMakeLists.txt  tahu.c
cpp/fastnoise/: CMakeLists.txt
cpp/gosoutpp/: CMakeLists.txt  gosoutpp.cpp
cpp/nn/: CMakeLists.txt  leukemia.cpp
cpp/opencvexp/: .editorconfig  .gitignore  CMakeLists.txt  README.md
cpp/opencvexp/include/cv/: detection.h
cpp/opencvexp/scripts/: build.bat
cpp/opencvexp/src/: CMakeLists.txt
cpp/opencvexp/src/cv/: CMakeLists.txt  detection.cpp
cpp/opencvexp/src/face/: CMakeLists.txt  assets.qrc  controller.cpp  controller.h  detection.cpp  detection.h  face.cpp  lock.cpp  lock.h  select.cpp  select.h  size.cpp  size.h  viewer.cpp  viewer.h
cpp/qt/: .gitignore  CMakeLists.txt  qt-experimental.pro
cpp/qt/MyExample/: MyExample.pro  main.cpp
cpp/qt/MyExample/qml/: main.qml
cpp/qt/MyPlugin/: CMakeLists.txt
cpp/qt/Qt514/: .gitignore  CMakeLists.txt  Configuration.ini  Qt514.pro  backend.cpp  backend.h  configuration.cpp  configuration.h  items.cpp  items.h  qtexperimental.cpp  resources.qrc
cpp/qt/Qt514/qml/: Connection.qml  ExperimentalChart.qml  ExperimentalPanel.qml  main.qml  resources.qrc
cpp/qt/Qt514/validation/: float.cpp  float.h
cpp/qt/QtGosModule/: CMakeLists.txt
cpp/qt/QtSandbox/: .gitignore  CMakeLists.txt  accuracy.cpp  accuracy.h  backend.cpp  backend.h  configuration.cpp  configuration.h  format.cpp  format.h  model.h  qtsandbox.cpp  qtsandbox.pro  range.cpp  range.h  restriction.cpp  restriction.h  types.h  ui.cpp  ui.h
cpp/qt/QtSandbox/qml/: ControlAccuracy.qml  ControlAccuracyForm.ui.qml  ControlFactor.qml  ControlFilePath.qml  ControlFormat.qml  ControlFormatForm.ui.qml  ControlNumber.qml  ControlRealSpinBox.qml  ControlRealSpinBoxForm.ui.qml  DialogTiming.qml  DialogUiInput.qml  DialogUiInputForm.ui.qml  DialogUiOutput.qml  DialogUiOutputForm.ui.qml  DialogUiPid.qml  DialogUiPidForm.ui.qml  ExperimentalChart.qml  ExperimentalPanel.qml  ExperimentalPanelRight.qml  QuickUiExample.qml  QuickUiExampleForm.ui.qml  RealTimeOutput.qml  Sandbox.qml  SandboxDialog.qml  SandboxGroupA.qml  SandboxGroupB.qml  SandboxItem.qml  SandboxPanel.qml  SandboxRange.qml  SandboxRealSpinBox.qml  SandboxTab.qml  SandboxTabView.qml  UiDialog.qml  UiTab.qml  UiTabView.qml  UseFactor.qml  main.qml  qtsandbox.qrc
cpp/qt/cmake/: GosQmlSupport.cmake
cpp/qt/pidtoolkitplugin/: CMakeLists.txt  pidtoolkitplugin.qrc  plugin.h
cpp/qt/pidtoolkitplugin/qml/: qmldir
cpp/qt/qt-extension-plugin/: myitem.cpp  myitem.h  qmldir  qt-extension-plugin.pro  qt-extension-plugin_plugin.cpp  qt-extension-plugin_plugin.h
cpp/qt/trycmakeqmlplugin/: CMakeLists.txt  plugin.cpp  qmldir
cpp/qt/trycmakeqmlplugin/qml/: Style.qml
cpp/zmq/: CMakeLists.txt
projects/expa/: .gitignore  CMakeLists.txt  Makefile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
projects/expa/e2e/src/: app.e2e-spec.ts
projects/expa/etc/: configuration.yaml
projects/expa/include/tiera/: tiera.h  version.h.in
projects/expa/include/wasm/: chart.h  demo.h  draw.h  heatmap.h  json.h  performance.h  rest.h  sdltypes.h  types.h  update.h  vector.h  ws.h
projects/expa/script/: build.sh  initialize.sh
projects/expa/scripts/: build.bat  build.sh  initialize.bat  initialize.sh  service.sh  start.bat  start.sh
projects/expa/src/: CMakeLists.txt  Makefile  index.html  styles.css  typings.d.ts
projects/expa/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  data.service.ts  dummy.service.ts  http-client-data.service.ts  in-memory-data-override.service.spec.ts  in-memory-data-override.service.ts  in-memory-data.service.ts  interpolate.service.ts  interval-performance.service.spec.ts  interval-performance.service.ts  lc-data.service.spec.ts  lc-data.service.ts  lc.service.ts  message.service.ts  performance.service.ts  web-socket.service.ts
projects/expa/src/assets/: configuration.json
projects/expa/src/environments/: environment.prod.ts  environment.ts
projects/expa/src/tiera/: CMakeLists.txt  tiera.c
projects/expa/src/tierb/: Makefile  configuration.yaml  tier.go
projects/expa/src/wasm/: CMakeLists.txt  chart.c  demo.c  draw.c  heatmap.c  json.c  performance.c  rest.c  update.c  vector.c  ws.c  ws.cpp
projects/expa/tests/: CMakeLists.txt
projects/expa/tests/tiera/: CMakeLists.txt  tiera.cpp
projects/expa/tests/wasm/: CMakeLists.txt  json.cpp  performance.cpp
projects/expb/: .gitignore  CMakeLists.txt  README.md  angular.json  karma.conf.js  package-lock.json  package.json
projects/expb/cmake/: soil.cmake
projects/expb/e2e/src/: app.e2e-spec.ts
projects/expb/include/modules/: graph.h  logistic.h  mset.h  owl.h.in  snake.h.in
projects/expb/lib/: .gitignore
projects/expb/scripts/: build.bat  build.sh  deploy.sh  initialize.bat  initialize.sh
projects/expb/src/: index.html  styles.css  typings.d.ts
projects/expb/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  emscripten-wasm.component.ts
tests/c/drilling/: CMakeLists.txt  density.cpp
web/charting/wd3/: .editorconfig  .gitignore  CMakeLists.txt  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
web/wasm/chart/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
(+1047 files in other folders)
